--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,52 +1,26 @@
-apply plugin: 'com.android.application'
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
-    defaultConfig {
-        applicationId "drawingDiary.brainlatch.com.drawingDiary"
-        minSdkVersion 16
-        targetSdkVersion 29
-        versionCode 26
-        versionName "2.1.2"
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+buildscript {
+    repositories {
+        jcenter()
+        google()
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
-    implementation 'com.google.android.gms:play-services-ads:19.5.0'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
-    def billing_version = "3.0.0"
-    implementation "com.android.billingclient:billing:$billing_version"
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://maven.google.com" }
+        google()
+    }
 }
 
-configurations.all {
-    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-        def requested = details.requested
-        if (requested.group == 'com.android.support') {
-            if (!requested.name.startsWith("multidex")) {
-                details.useVersion '25.3.0'
-            }
-        }
-    }
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
